# id-card-scanner

./: .dockerignore  .gitignore  .woodpecker.yaml  CONTEXT.md  Dockerfile  README.md  pyproject.toml
app/: __main__.py  config.py  devices.py  escl.py  imaging.py  main.py  pdfgen.py  settings.py
app/static/: index.html
docs/adr/: 0001-escl-direct-scan.md
tests/: test_api.py  test_escl.py  test_imaging.py  test_pdfgen.py  test_settings.py
