[project]
name = "id-card-scanner"
version = "0.1.0"
description = "证件双面扫描 → 单页 A4 复印件 PDF（eSCL 平板扫描仪）"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "opencv-python-headless>=4.10",
    "numpy>=1.26",
    "pillow>=10.4",
    "zeroconf>=0.140",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pypdf>=5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
